Normalize capitalization from "Public Key Id" to "Public Key ID"
The GnuTLS codebase produced the string "Public Key Id" in some places
(e.g. in the output of "certtool -i"), and "Public Key ID" in other
places (e.g. in the output of "certtool -k").

This changeset standardizes on "Public Key ID", making the output
consistent across uses.

Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/po/cs.po.in
+++ b/po/cs.po.in
@@ -1365,7 +1365,7 @@ msgstr ""
 
 #: lib/x509/output.c:1611 lib/x509/output.c:2450
 msgid ""
-"\tPublic Key Id:\n"
+"\tPublic Key ID:\n"
 "\t\t"
 msgstr ""
 "\tID veřejného klíče:\n"
