--- a/po/de.po.in
+++ b/po/de.po.in
@@ -1358,7 +1358,7 @@ msgstr ""
 
 #: lib/x509/output.c:1611 lib/x509/output.c:2450
 msgid ""
-"\tPublic Key Id:\n"
+"\tPublic Key ID:\n"
 "\t\t"
 msgstr ""
 "\tKennung des öffentlichen Schlüssels:\n"
