--- a/po/fr.po.in
+++ b/po/fr.po.in
@@ -866,7 +866,7 @@ msgstr ""
 
 #: x509/output.c:1188 x509/output.c:1956
 msgid ""
-"\tPublic Key Id:\n"
+"\tPublic Key ID:\n"
 "\t\t"
 msgstr ""
 "\tId de clef publique:\n"
