--- a/po/ms.po.in
+++ b/po/ms.po.in
@@ -824,7 +824,7 @@ msgstr ""
 
 #: lib/x509/output.c:985
 msgid ""
-"\tPublic Key Id:\n"
+"\tPublic Key ID:\n"
 "\t\t"
 msgstr ""
 "\tId Kekunci Awam:\n"
