--- a/po/nl.po.in
+++ b/po/nl.po.in
@@ -1356,7 +1356,7 @@ msgstr ""
 
 #: lib/x509/output.c:1611 lib/x509/output.c:2450
 msgid ""
-"\tPublic Key Id:\n"
+"\tPublic Key ID:\n"
 "\t\t"
 msgstr ""
 "\tID van publieke sleutel:\n"
