--- a/po/pl.po.in
+++ b/po/pl.po.in
@@ -1351,7 +1351,7 @@ msgstr ""
 
 #: lib/x509/output.c:1611 lib/x509/output.c:2450
 msgid ""
-"\tPublic Key Id:\n"
+"\tPublic Key ID:\n"
 "\t\t"
 msgstr ""
 "\tIdentyfikator klucza publicznego:\n"
