Added Camellia with GCM

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -82,6 +82,8 @@ extern "C"
  * @GNUTLS_CIPHER_DES_CBC: DES in CBC mode (56-bit keys).
  * @GNUTLS_CIPHER_AES_128_GCM: AES in GCM mode with 128-bit keys.
  * @GNUTLS_CIPHER_AES_256_GCM: AES in GCM mode with 256-bit keys.
+ * @GNUTLS_CIPHER_CAMELLIA_128_GCM: CAMELLIA in GCM mode with 128-bit keys.
+ * @GNUTLS_CIPHER_CAMELLIA_256_GCM: CAMELLIA in GCM mode with 256-bit keys.
  * @GNUTLS_CIPHER_IDEA_PGP_CFB: IDEA in CFB mode.
  * @GNUTLS_CIPHER_3DES_PGP_CFB: 3DES in CFB mode.
  * @GNUTLS_CIPHER_CAST5_PGP_CFB: CAST5 in CFB mode.
@@ -113,6 +115,8 @@ extern "C"
     GNUTLS_CIPHER_CAMELLIA_192_CBC = 95,
     GNUTLS_CIPHER_SALSA20_256 = 96,
     GNUTLS_CIPHER_ESTREAM_SALSA20_256 = 97,
+    GNUTLS_CIPHER_CAMELLIA_128_GCM = 98,
+    GNUTLS_CIPHER_CAMELLIA_256_GCM = 99,
 
     /* used only for PGP internals. Ignored in TLS/SSL
      */
