--- a/lib/nettle/Makefile.am
+++ b/lib/nettle/Makefile.am
@@ -38,4 +38,4 @@ endif
 noinst_LTLIBRARIES = libcrypto.la
 
 libcrypto_la_SOURCES = pk.c mpi.c mac.c cipher.c rnd.c init.c egd.c egd.h \
-	gnettle.h 
+	gnettle.h gcm-camellia.h gcm-camellia.c
