--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -574,6 +574,8 @@ FUNCS += functions/dane_query_status
 FUNCS += functions/dane_query_status.short
 FUNCS += functions/dane_query_tlsa
 FUNCS += functions/dane_query_tlsa.short
+FUNCS += functions/dane_raw_tlsa
+FUNCS += functions/dane_raw_tlsa.short
 FUNCS += functions/dane_state_deinit
 FUNCS += functions/dane_state_deinit.short
 FUNCS += functions/dane_state_init
@@ -586,6 +588,8 @@ FUNCS += functions/dane_verification_status_print
 FUNCS += functions/dane_verification_status_print.short
 FUNCS += functions/dane_verify_crt
 FUNCS += functions/dane_verify_crt.short
+FUNCS += functions/dane_verify_crt_raw
+FUNCS += functions/dane_verify_crt_raw.short
 FUNCS += functions/dane_verify_session_crt
 FUNCS += functions/dane_verify_session_crt.short
 FUNCS += functions/gnutls_alert_get
