--- a/tests/dsa/Makefile.am
+++ b/tests/dsa/Makefile.am
@@ -27,4 +27,7 @@ if !WINDOWS
 TESTS = testdsa
 endif
 
-TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT)
+TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT) \
+	LC_ALL="C"						\
+	top_builddir="$(top_builddir)"				\
+	srcdir="$(srcdir)"
