--- a/tests/pkcs1-padding/Makefile.am
+++ b/tests/pkcs1-padding/Makefile.am
@@ -30,4 +30,7 @@ if !WINDOWS
 TESTS = pkcs1-pad
 endif
 
-TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT)
+TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT) \
+	LC_ALL="C"						\
+	top_builddir="$(top_builddir)"				\
+	srcdir="$(srcdir)"
