--- a/tests/key-id/Makefile.am
+++ b/tests/key-id/Makefile.am
@@ -26,4 +26,7 @@ dist_check_SCRIPTS = key-id
 
 TESTS = key-id
 
-TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT)
+TESTS_ENVIRONMENT = EXEEXT=$(EXEEXT) \
+	LC_ALL="C"						\
+	top_builddir="$(top_builddir)"				\
+	srcdir="$(srcdir)"
