we now explicitly check for librt.

--- a/configure.ac
+++ b/configure.ac
@@ -209,6 +209,10 @@ dnl Check clock_gettime and pthread_mutex_lock in libc (avoid linking to other l
 AC_CHECK_FUNCS([fork getrusage getpwuid_r nanosleep daemon getpid clock_gettime pthread_mutex_lock iconv localtime vasprintf],,)
 AM_CONDITIONAL(HAVE_FORK, test "$ac_cv_func_fork" != "no")
 
+AC_LIB_HAVE_LINKFLAGS(rt,, [#include <time.h>
+#include <signal.h>
+], [timer_create (0,0,0);])
+
 if test "$ac_cv_func_pthread_mutex_lock" != "yes";then
   AC_LIB_HAVE_LINKFLAGS(pthread,, [#include <pthread.h>], [pthread_mutex_lock (0);])
 fi
