Added new functions

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1300,6 +1300,8 @@ FUNCS += functions/gnutls_pkcs11_token_get_info
 FUNCS += functions/gnutls_pkcs11_token_get_info.short
 FUNCS += functions/gnutls_pkcs11_token_get_mechanism
 FUNCS += functions/gnutls_pkcs11_token_get_mechanism.short
+FUNCS += functions/gnutls_pkcs11_token_get_random
+FUNCS += functions/gnutls_pkcs11_token_get_random.short
 FUNCS += functions/gnutls_pkcs11_token_get_url
 FUNCS += functions/gnutls_pkcs11_token_get_url.short
 FUNCS += functions/gnutls_pkcs11_token_init
