ignore auto-generated files

--- a/.gitignore
+++ b/.gitignore
@@ -650,3 +650,23 @@ tests/mini-rsa-psk
 tests/mini-record-2
 tests/mini-cert-status
 tests/suite/ciphersuite/gnutls-ciphers.js
+src/certtool-args.c
+src/certtool-args.h
+src/cli-args.c
+src/cli-args.h
+src/cli-debug-args.c
+src/cli-debug-args.h
+src/danetool-args.c
+src/danetool-args.h
+src/ocsptool-args.c
+src/ocsptool-args.h
+src/p11tool-args.c
+src/p11tool-args.h
+src/psk-args.c
+src/psk-args.h
+src/serv-args.c
+src/serv-args.h
+src/srptool-args.c
+src/srptool-args.h
+src/tpmtool-args.c
+src/tpmtool-args.h
