--- a/Makefile.am
+++ b/Makefile.am
@@ -53,6 +53,7 @@ dist-hook:
 	cd $(distdir)/src/ && for i in *.def;do \
 		if test x"$$i" = x"args-std.def";then  continue; fi; \
 		autogen $$i; \
+		touch $$i; \
 		cp $$i $$i.tmp; \
 		sed -i 's/@subheading \(.*\)/@*\n@var{\1}\n@*/' $$i.tmp; \
 		autogen -Tagman-cmd.tpl $$i.tmp; \
