--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,7 @@ gl_EARLY
 AM_PROG_AS
 AM_PROG_AR
 AC_PROG_CXX
+AM_PROG_CC_C_O
 AC_CHECK_PROG([AUTOGEN], [autogen], [autogen], [/bin/true])
 
 if test x"$AUTOGEN" = "x/bin/true"; then
