--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -2090,9 +2090,9 @@ void gnutls_certificate_set_pin_function(gnutls_certificate_credentials_t,
 					 void *userdata);
 
  /* Self checking functions */
- int gnutls_cipher_self_test(gnutls_cipher_algorithm_t cipher);
- int gnutls_mac_self_test(gnutls_mac_algorithm_t mac);
- int gnutls_digest_self_test(gnutls_digest_algorithm_t digest);
+int gnutls_cipher_self_test(unsigned all, gnutls_cipher_algorithm_t cipher);
+int gnutls_mac_self_test(unsigned all, gnutls_mac_algorithm_t mac);
+int gnutls_digest_self_test(unsigned all, gnutls_digest_algorithm_t digest);
 
 
   /* Gnutls error codes. The mapping to a TLS alert is also shown in
