--- a/configure.ac
+++ b/configure.ac
@@ -122,6 +122,14 @@ AM_CONDITIONAL(ASM_X86, test x"$hw_accel" = x"x86" || test x"$hw_accel" = x"x86-
 AM_CONDITIONAL(HAVE_GCC_GNU89_INLINE_OPTION, test "$gnu89_inline" = "yes"])
 AM_CONDITIONAL(HAVE_GCC, test "$GCC" = "yes")
 
+AC_ARG_ENABLE(self-checks,
+  AS_HELP_STRING([--enable-self-checks], [enable self checking functionality]),
+    enable_self_checks=$enableval, enable_self_checks=no)
+AM_CONDITIONAL(ENABLE_SELF_CHECKS, test "$enable_self_checks" = "yes")
+if [ test "$enable_self_checks" = "yes" ];then
+   AC_DEFINE([ENABLE_SELF_CHECKS], 1, [Self checks are included in the library])
+fi
+
 dnl Try the hooks.m4
 LIBGNUTLS_HOOKS
 LIBGNUTLS_EXTRA_HOOKS
@@ -720,6 +728,7 @@ if features are disabled)
   Heartbeat support:    $ac_enable_heartbeat
   RSA-EXPORT compat:    $ac_enable_rsa_export
   Unicode support:      $ac_have_unicode
+  Self checks:          $enable_self_checks
 ])
 
 AC_MSG_NOTICE([Optional applications:
