--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -78,8 +78,11 @@ COBJECTS = gnutls_range.c gnutls_record.c \
 	gnutls_rsa_export.c gnutls_helper.c gnutls_supplemental.c	\
 	random.c crypto-api.c gnutls_privkey.c gnutls_pcert.c		\
 	gnutls_pubkey.c locks.c gnutls_dtls.c system_override.c	\
-	crypto-backend.c verify-tofu.c pin.c tpm.c \
-	crypto-selftests.c crypto-selftests-pk.c
+	crypto-backend.c verify-tofu.c pin.c tpm.c
+
+if ENABLE_SELF_CHECKS
+COBJECTS += crypto-selftests.c crypto-selftests-pk.c
+endif
 
 if ENABLE_PKCS11
 COBJECTS += pkcs11.c pkcs11_privkey.c pkcs11_write.c pkcs11_secret.c \
