Improvements in PKCS #11 support.
Added gnutls_pkcs11_obj_export3 and gnutls_pkcs11_get_raw_issuer.
The latter function allows to obtain the issuer of a certificate stored in a token.

While traversing tokens, use the URL provided by the user, to avoid looking
for objects in unrelated tokens.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -81,7 +81,8 @@ COBJECTS = gnutls_range.c gnutls_record.c \
 	crypto-backend.c verify-tofu.c pin.c tpm.c 
 
 if ENABLE_PKCS11
-COBJECTS += pkcs11.c pkcs11_privkey.c pkcs11_write.c pkcs11_secret.c
+COBJECTS += pkcs11.c pkcs11_privkey.c pkcs11_write.c pkcs11_secret.c \
+	pkcs11_int.c
 endif
 
 if ENABLE_NETTLE
