Distribute the autogen'erated files as .bak and enable them only if local libopts is being used

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,5 +59,8 @@ dist-hook:
 		rm -f $$i.tmp; \
 		mv -f *.1 ../doc/manpages/; \
 	done
+	cd $(distdir)/src/ && for i in *-args.c *-args.h;do \
+		mv $$i $$i.bak; \
+	done
 	sed 's/\@\@VERSION\@\@/$(VERSION)/g' -i $(distdir)/doc/invoke-*.texi
 	touch $(distdir)/doc/*.html $(distdir)/doc/*.pdf $(distdir)/doc/*.info
