--- a/lib/nettle/Makefile.am
+++ b/lib/nettle/Makefile.am
@@ -37,5 +37,11 @@ endif
 
 noinst_LTLIBRARIES = libcrypto.la
 
-libcrypto_la_SOURCES = pk.c mpi.c mac.c cipher.c rnd.c init.c egd.c egd.h \
+libcrypto_la_SOURCES = pk.c mpi.c mac.c cipher.c init.c egd.c egd.h \
 	gnettle.h gcm-camellia.h gcm-camellia.c
+
+if ENABLE_FIPS140
+libcrypto_la_SOURCES += rnd-fips.c
+else
+libcrypto_la_SOURCES += rnd.c
+endif
