Report the inclusion of libopts and libtasn1.

--- a/configure.ac
+++ b/configure.ac
@@ -314,6 +314,7 @@ fi
 
 AM_CONDITIONAL(ENABLE_TROUSERS, test "$with_tpm" != "no")
 
+ac_enable_local_libopts=yes
 LIBOPTS_CHECK([src/libopts])
 if test "$NEED_LIBOPTS_DIR" != "true";then
 	dnl delete libopts-generated files
@@ -324,6 +325,7 @@ if test "$NEED_LIBOPTS_DIR" != "true";then
 		fi
 	done
 	AC_SUBST([AUTOGEN], [/bin/true])
+	ac_enable_local_libopts=no
 fi
 
 AC_CHECK_TYPE(ssize_t,
@@ -678,7 +680,8 @@ if features are disabled)
 AC_MSG_NOTICE([Optional applications:
 
   crywrap app:          $libidn
-  local libopts:        $enable_local_libopts
+  local libopts:        ${ac_enable_local_libopts}
+  local libtasn1:       ${included_libtasn1}
 ])
 
 AC_MSG_NOTICE([Optional libraries:
